[package]
name = "ftx1-mm"
version = "0.1.1"
authors = ["Vladimir K <ew1abz@gmail.com>"]
edition = "2021"
description = "CLI tool for managing memory channels on Yaesu FTX-1 transceivers via CAT protocol"
license = "MIT"
repository = "https://github.com/ew1abz/yaesu-ftx-1-memory-manipulator"
readme = "README.md"

[dependencies]
log = "0.4"
env_logger = "0.11.8"
serialport = "4.8.1"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
indicatif = "0.18.3"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = { version = "7", features = ["custom_styling"] }

[profile.release]
strip = true
